Add Sweetalert2 and update functionality of modals

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sweetalert2.min.css">
 </head>
 <body>
+    <script src="js/sweetalert2.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
