--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <script src="js/sweetalert2.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/resources.js"></script>
 </body>
 </html>
