Made game responsive and improved overall comments

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- specifying the character encoding used -->
     <meta charset="UTF-8">
+    <!-- setting viewport to add responsiveness to the document -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Effective JavaScript: Frogger</title>
+    <!-- main style sheet for the document -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- style sheet to use sweetalert2 modals -->
     <link rel="stylesheet" href="css/sweetalert2.min.css">
+    <!-- style sheet to use pacifico font style -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
 </head>
 <body>
+    <!-- js file to use sweetalert2 interactive modals -->
     <script src="js/sweetalert2.min.js"></script>
+    <!-- main js file for the document -->
     <script src="js/main.js"></script>
+    <!-- js file to load basic resources required by the main js file -->
     <script src="js/resources.js"></script>
 </body>
 </html>
