Optimized files and improved reponsive design

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- specifying the character encoding used -->
     <meta charset="UTF-8">
     <!-- setting viewport to add responsiveness to the document -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Effective JavaScript: Frogger</title>
     <!-- main style sheet for the document -->
     <link rel="stylesheet" href="css/style.css">
